[gd_scene load_steps=8 format=2]

[ext_resource path="res://Imagenes/Cargar.tres" type="Texture" id=1]
[ext_resource path="res://Canjeos control/Main.gd" type="Script" id=2]
[ext_resource path="res://Canjeos control/Canjeo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Imagenes/plus.png" type="Texture" id=4]
[ext_resource path="res://Imagenes/Reload.png" type="Texture" id=5]
[ext_resource path="res://Imagenes/minus.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.282353, 0.392157, 0.580392, 1 )

[node name="Canjeos control" type="Control"]
margin_right = 259.0
margin_bottom = 168.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 230, 70 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -210.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Añadir" type="Button" parent="Control"]
margin_left = 2.0
margin_top = 2.0
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 16, 16 )
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Refrescar" type="Button" parent="Control"]
margin_left = 2.0
margin_top = 32.0
margin_right = 28.0
margin_bottom = 58.0
grow_horizontal = 0
rect_min_size = Vector2( 16, 16 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eliminar" type="Button" parent="Control"]
margin_left = 2.0
margin_top = 62.0
margin_right = 28.0
margin_bottom = 88.0
grow_horizontal = 0
rect_min_size = Vector2( 16, 16 )
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 6 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_right = -0.600006
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 50 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/bg = SubResource( 1 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
margin_right = 228.4
margin_bottom = 168.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 102.616, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 5
columns = 3

[node name="Control" parent="ScrollContainer/GridContainer" instance=ExtResource( 3 )]
visible = false

[node name="Control2" parent="ScrollContainer/GridContainer" instance=ExtResource( 3 )]
visible = false

[node name="Control3" parent="ScrollContainer/GridContainer" instance=ExtResource( 3 )]
visible = false

[node name="Control4" parent="ScrollContainer/GridContainer" instance=ExtResource( 3 )]
visible = false

[node name="Loading" type="TextureRect" parent="."]
modulate = Color( 0.282353, 0.392157, 0.580392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 48.1085
margin_right = -57.8824
margin_bottom = -49.8915
rect_min_size = Vector2( 70, 70 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anadir" type="WindowDialog" parent="."]
margin_left = 15.0
margin_top = 40.0
margin_right = 315.0
margin_bottom = 290.0
rect_min_size = Vector2( 300, 250 )
popup_exclusive = true
window_title = "Añadir canjeo:"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titulo" type="LineEdit" parent="anadir"]
anchor_right = 1.0
margin_left = 70.0
margin_top = 9.0
margin_right = -70.0
margin_bottom = 24.0
placeholder_text = "Titulo..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descripcion" type="TextEdit" parent="anadir"]
anchor_right = 1.0
margin_left = 70.0
margin_top = 43.0
margin_right = -73.0
margin_bottom = 91.0
text = "Descripción..."
breakpoint_gutter = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coste" type="LineEdit" parent="anadir"]
margin_left = 70.0
margin_top = 112.0
margin_right = 174.0
margin_bottom = 136.0
max_length = 8
placeholder_text = "Coste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" type="CheckBox" parent="anadir"]
margin_left = 14.1421
margin_top = 147.785
margin_right = 38.1421
margin_bottom = 171.785
text = "Canjeo de texto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color" type="Label" parent="anadir"]
margin_left = 18.3848
margin_top = 182.434
margin_right = 58.3848
margin_bottom = 196.434
text = "Color:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="ColorPickerButton" parent="anadir/color"]
margin_left = 44.0
margin_top = -7.0
margin_right = 115.0
margin_bottom = 20.0
text = "Color"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="anadir"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 992.902
margin_top = 547.519
margin_right = -100.098
margin_bottom = -37.4811
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 13
size_flags_vertical = 13
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="anadir/Control"]
anchor_top = 0.104
anchor_bottom = 0.104
margin_left = 8.0
margin_top = 0.0079999
margin_right = 82.0
margin_bottom = 26.008
text = "Añadir"

[node name="eliminar" type="ConfirmationDialog" parent="."]
margin_left = 19.3459
margin_top = 85.9731
margin_right = 255.346
margin_bottom = 155.973
window_title = "Seguro que quieres eliminar:  \""
dialog_text = "No se podra revocar la acción."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Añadir" to="." method="Anadir"]
[connection signal="pressed" from="Control/Refrescar" to="." method="_on_Refrescar_pressed"]
[connection signal="pressed" from="Control/eliminar" to="." method="_on_eliminar_pressed"]
[connection signal="pressed" from="anadir/Control/Button" to="." method="_on_Button_pressed"]
[connection signal="confirmed" from="eliminar" to="." method="_on_eliminar_confirmed"]

[editable path="ScrollContainer/GridContainer/Control"]
